[tool.poetry]
name = "addromaji"
version = "0.1.0"
description = ""
authors = ["Yuki Nagato <37764578+YUKI2eN3e@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pykakasi = "^2.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
