[tool.poetry]
name = "addromaji"
version = "0.1.0"
description = "Add romaji to dictionary files (currently just JMdict)."
authors = ["Yuki Nagato <37764578+YUKI2eN3e@users.noreply.github.com>"]
packages = [
	{ include = "src", from = "." }
]

[tool.poetry.scripts]
GetDict = "src.GetDict:run"
Add2JMdict = "src.Add2JMdict:run"

[tool.poetry.dependencies]
python = "^3.9"
pykakasi = "^2.2.1"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
